--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
     <title>Page Not Found</title>
 </head>
 <body>
-    <header style="font-size: 100px;">WOWOWOWOWOOWOWOWOOWOWOWOW That Page doesn't exist partner! <b> Please Continue to The Home Page Below!</b><b> <a href="index.html"> Home! </a></b> <img src="https://media.tenor.com/SRS1aHkusrsAAAAi/error-garrys-mod.gif" width="200px" alt=""> </header>
+    <header style="font-size: 100px;">WOWOWOWOWOOWOWOWOOWOWOWOW That Page doesn't exist partner! <b> Please Continue to The Home Page Here!</b><b> <a href="index.html"> Home! </a></b> <img src="https://media.tenor.com/SRS1aHkusrsAAAAi/error-garrys-mod.gif" width="200px" alt=""> </header>
 </body>
 </html>
