--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="house.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="house.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blob Christmas list!!</title>
-    <link rel="stylesheet" href="style.css">
-    <header class="stroked" >My Christmas List ;)</header>
+    <link rel="stylesheet" href="style.css" />
+    <header class="stroked">My Christmas List ;)</header>
     <audio controls>
-    <source id="rockin-id" src="Rockin Around The Christmas Tree - LoFi · Music for Christmas Mood 🎁 - Caravel Music.mp3">
+      <source id="rockin-id" src="Rockin Around The Christmas Tree - LoFi · Music for Christmas Mood 🎁 - Caravel Music.mp3" />
     </audio>
     <link rel="stylesheet" href="https://tobycm.github.io/easy-snow/snow.css" />
-    <script>document.christmas = true;</script>
+    <script>
+      document.christmas = true;
+    </script>
     <script src="https://tobycm.github.io/easy-snow/snow.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1></h1>
-        <div style="display: inline-block; text-align: center; margin-right: 100px;">
-            <div style="font-size: 50px;">Tech</div>
-            <a href="tech.html"><img src="tech.png" class="popout-img" width="200" style="margin-right: 50px;"> </a>
-        </div>
-        <div style="display: inline-block; text-align: center; margin-right: 50px;">
-    <div style="font-size: 50px;">Lego</div>
-            <a href="lego.html"><img src="lego.png" class="popout-img" width="200" style="margin-right: 100px;"> </a>
-            </div>
-            <div style="display: inline-block; text-align: center; margin-right: 50px;">
-    <div style="font-size: 50px;">Gift Cards</div>
-            <a href="card.html"><img src="card.png" class="popout-img" width="200" style="margin-right: 100px;"></a>
-            </div>
-            <div style="display: inline-block; text-align: center; margin-right: 50px;">
-    <div style="font-size: 50px;">Stocking</div>
-            <a href="stocking.html"><img src="stocking.png" class="popout-img" width="200" style="margin-right: 100px;"></a>
-            </div>
-            <div style="display: inline-block; text-align: center; margin-right: 50px;">
-    <div style="font-size: 50px;">Clothing</div>
-            <a href="clothes.html"><img src="sweater.png" class="popout-img" width="200" style="margin-right: 100px;"></a>
-            </div>
-            <div style="display: inline-block; text-align: center; margin-right: 50px;">
-    <div style="font-size: 50px;">Other</div>
-            <a href="other.html"><img src="present.png" class="popout-img" width="200" style="margin-right: 100px;"></a>
-            </div>
-            <img src="https://media1.tenor.com/m/sBoh_OK3-xQAAAAC/cat.gif" class="popout-img" width="200" style="margin-top: 100px;">
-            <img src="https://media1.tenor.com/m/JdwuwqUu7WcAAAAC/bleh-cat-blehh.gif"  style="position: fixed; bottom: 0; left:0; width:300px;" alt="">
-            <img src="https://media1.tenor.com/m/uPqBfKhxLHgAAAAC/2038pok%C3%A9mon-ceo-pok%C3%A9mon.gif"  style="position: fixed; bottom: 0; right:0; width:300px;" alt="">
-            <img src="https://media1.tenor.com/m/YrW-0bsONREAAAAC/were-all-in-this-together-clark-griswold.gif" style="position: fixed; bottom: 0; right:40%; width:500px;" alt="">
-</body>
+    <div style="display: inline-block; text-align: center; margin-right: 100px">
+      <div style="font-size: 50px">Tech</div>
+      <a href="tech.html"><img src="tech.png" class="popout-img" width="200" style="margin-right: 50px" /> </a>
+    </div>
+    <div style="display: inline-block; text-align: center; margin-right: 50px">
+      <div style="font-size: 50px">Lego</div>
+      <a href="lego.html"><img src="lego.png" class="popout-img" width="200" style="margin-right: 100px" /> </a>
+    </div>
+    <div style="display: inline-block; text-align: center; margin-right: 50px">
+      <div style="font-size: 50px">Gift Cards</div>
+      <a href="card.html"><img src="card.png" class="popout-img" width="200" style="margin-right: 100px" /></a>
+    </div>
+    <div style="display: inline-block; text-align: center; margin-right: 50px">
+      <div style="font-size: 50px">Stocking</div>
+      <a href="stocking.html"><img src="stocking.png" class="popout-img" width="200" style="margin-right: 100px" /></a>
+    </div>
+    <div style="display: inline-block; text-align: center; margin-right: 50px">
+      <div style="font-size: 50px">Clothing</div>
+      <a href="clothes.html"><img src="sweater.png" class="popout-img" width="200" style="margin-right: 100px" /></a>
+    </div>
+    <div style="display: inline-block; text-align: center; margin-right: 50px">
+      <div style="font-size: 50px">Other</div>
+      <a href="other.html"><img src="present.png" class="popout-img" width="200" style="margin-right: 100px" /></a>
+    </div>
+    <img src="https://media1.tenor.com/m/sBoh_OK3-xQAAAAC/cat.gif" class="popout-img" width="200" style="margin-top: 100px" />
+    <img src="https://media1.tenor.com/m/JdwuwqUu7WcAAAAC/bleh-cat-blehh.gif" style="position: fixed; bottom: 0; left: 0; width: 300px" alt="" />
+    <img
+      src="https://media1.tenor.com/m/uPqBfKhxLHgAAAAC/2038pok%C3%A9mon-ceo-pok%C3%A9mon.gif"
+      style="position: fixed; bottom: 0; right: 0; width: 300px"
+      alt="" />
+    <img
+      src="https://media1.tenor.com/m/YrW-0bsONREAAAAC/were-all-in-this-together-clark-griswold.gif"
+      style="position: fixed; bottom: 0; right: 40%; width: 500px"
+      alt="" />
+
+    <div style="height: 40vh"></div>
+  </body>
 </html>
