ayoooooo kinda almost done

--- a/lego.html
+++ b/lego.html
@@ -13,8 +13,39 @@
 </head>
 <body>
     <h1></h1>
-     <a href="index.html"> <img src="house.png" class="popout-img" style="position: fixed; top: 0; right:0; width:200px;"></a>
+     <a href="index.html"> <img src="house.png" class="popout-img" style="position: fixed; top: 0; right:0; width:100px;"></a>
      <a href="https://www.lego.com/en-ca/product/lego-ideas-home-alone-21330"> <img src="homealone.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
      <a href="https://www.lego.com/en-ca/product/game-boy-72046"> <img src="gameboy.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+      <a href="https://www.lego.com/en-ca/product/the-simpsons-krusty-burger-10352"> <img src="simpson.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+       <a href="https://www.lego.com/en-ca/product/the-going-merry-pirate-ship-75639"> <img src="merry.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+        <a href="https://www.lego.com/en-ca/product/hokusai-the-great-wave-31208"> <img src="wave.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+         <a href="https://www.lego.com/en-ca/product/the-batman-batmobile-76332"> <img src="batmobile.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+           <a href="https://www.lego.com/en-ca/product/arkham-asylum-76300"> <img src="batman.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+            <a href="https://www.lego.com/en-ca/product/superman-mech-vs-lex-luthor-76302"> <img src="superman.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/bonsai-tree-10281"> <img src="bonsai.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/lilo-and-stitch-beach-house-43268"> <img src="stitch.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/tranquil-garden-10315"> <img src="japan.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/x-men-the-x-mansion-76294"> <img src="xmen.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/peter-parkers-apartment-76317"> <img src="apartment.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/spider-verse-miles-morales-vs-the-spot-76311"> <img src="store.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/avengers-age-of-ultron-quinjet-76325"> <img src="avengers.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/x-men-x-jet-76281"> <img src="jet.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/guardians-of-the-galaxy-the-milano-76286"> <img src="spaceship.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+             <a href="https://www.lego.com/en-ca/product/the-avengers-vs-the-leviathan-76290"> <img src="hulk.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+              <a href="https://www.lego.com/en-ca/product/captain-america-vs-red-hulk-battle-76292"> <img src="redhulk.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+               <a href="https://www.lego.com/en-ca/product/captain-america-civil-war-action-battle-76314"> <img src="antman.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+                <a href="https://www.lego.com/en-ca/product/republic-juggernaut-75413"> <img src="starwars.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+                 <a href="https://www.lego.com/en-ca/product/great-deku-tree-2-in-1-77092"> <img src="zelda.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+                  <a href="https://www.lego.com/en-ca/product/windmill-village-hut-75636"> <img src="shanks.png" class="popout-img" width="200px" style="margin-right: 100px;"  alt=""></a>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
